--- a/RC_QC_Line/package.json
+++ b/RC_QC_Line/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc_qc_line",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "description": "LINE-based image management system for product QC by lot and date",
   "main": "app.js",
   "scripts": {
@@ -18,10 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
-    "moment": "^2.29.4",
-    "archiver": "^6.0.1",
-    "node-schedule": "^2.1.1",
-    "axios": "^1.6.2"
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
