--- a/RC_QC_Line/package.json
+++ b/RC_QC_Line/package.json
@@ -18,7 +18,8 @@
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "archiver": "^5.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
