--- a/Organization API/.env.example
+++ b/Organization API/.env.example
@@ -14,9 +14,13 @@ DB_ENCRYPT=false
 DB_TRUST_SERVER_CERTIFICATE=true
 
 # Security Configuration
-JWT_SECRET=your-super-secret-jwt-key-please-change-this
-API_KEY_SECRET=your-api-key-secret-please-change-this
-SESSION_SECRET=your-session-secret-please-change-this
+JWT_SECRET=your-super-secret-jwt-key-please-change-this-minimum-32-chars
+API_KEY_SECRET=your-api-key-secret-please-change-this-minimum-32-chars
+SESSION_SECRET=your-session-secret-please-change-this-minimum-32-chars
+
+# Default Admin Credentials (Change immediately after first login!)
+# Default password: Admin@123
+ADMIN_PASSWORD_HASH=$2a$10$5K3kG7M5TqJqU1O8nZHyNuGhR8CxOXlZYHjPqV3F8Y.6hHm3qW8Aq
 
 # API Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
