--- a/Organization API/.env.example
+++ b/Organization API/.env.example
@@ -1,51 +1,62 @@
+# Path: /.env.example
 # Application Configuration
 NODE_ENV=development
 PORT=3000
-API_PORT=3001
-APP_NAME="Organization Structure Management System"
 
 # Database Configuration
 DB_SERVER=localhost
 DB_PORT=1433
-DB_NAME=OrgStructureDB
-DB_USER=your_username
-DB_PASSWORD=your_password
-DB_ENCRYPT=false
+DB_DATABASE=OrgStructureDB
+DB_USER=sa
+DB_PASSWORD=YourStrongPassword123!
+DB_ENCRYPT=true
 DB_TRUST_SERVER_CERTIFICATE=true
 
-# Security Configuration
-JWT_SECRET=your-super-secret-jwt-key-please-change-this-minimum-32-chars
-API_KEY_SECRET=your-api-key-secret-please-change-this-minimum-32-chars
-SESSION_SECRET=your-session-secret-please-change-this-minimum-32-chars
+# Session Configuration
+SESSION_SECRET=your-super-secret-session-key-change-this-in-production
 
-# Default Admin Credentials (Change immediately after first login!)
-# Default password: Admin@123
-ADMIN_PASSWORD_HASH=$2a$10$5K3kG7M5TqJqU1O8nZHyNuGhR8CxOXlZYHjPqV3F8Y.6hHm3qW8Aq
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRES_IN=7d
 
-# API Rate Limiting
+# CORS Configuration
+CORS_ORIGIN=http://localhost:3000,http://localhost:3001
+
+# API Configuration
+API_VERSION=v1
+API_PREFIX=/api/v1
+
+# Logging
+LOG_LEVEL=info
+LOG_DIR=logs
+
+# Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# Logging Configuration
-LOG_LEVEL=info
-LOG_FILE_PATH=logs/app.log
-LOG_MAX_SIZE=10m
-LOG_MAX_FILES=14d
+# Admin Credentials (for initial setup)
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin123
 
-# CORS Configuration
-CORS_ORIGIN=http://localhost:3000
-CORS_CREDENTIALS=true
-
-# Pagination
-DEFAULT_PAGE_SIZE=20
-MAX_PAGE_SIZE=100
-
-# Cache Configuration (optional)
-CACHE_TTL=3600
-
-# Email Configuration (for future use)
+# Email Configuration (optional)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
+SMTP_SECURE=false
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
-SMTP_FROM=noreply@organization.com
+
+# File Upload Configuration
+MAX_FILE_SIZE=10485760
+ALLOWED_FILE_TYPES=jpg,jpeg,png,pdf,doc,docx,xls,xlsx
+
+# Security
+BCRYPT_ROUNDS=10
+CSRF_ENABLED=true
+
+# Cache Configuration (optional)
+CACHE_ENABLED=false
+CACHE_TTL=3600
+
+# External API Keys (if needed)
+EXTERNAL_API_KEY=
+EXTERNAL_API_SECRET=
