--- a/Organization API/package.json
+++ b/Organization API/package.json
@@ -1,61 +1,83 @@
 {
-    "name": "organization-structure-management",
-    "version": "1.0.0",
-    "description": "Organization Structure Management System with RESTful API",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js",
-      "test": "jest",
-      "test:watch": "jest --watch",
-      "test:coverage": "jest --coverage"
-    },
-    "keywords": [
-      "organization",
-      "structure",
-      "api",
-      "nodejs",
-      "express"
+  "name": "organization-structure-management",
+  "version": "1.0.0",
+  "description": "Organization Structure Management System API",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
+    "db:init": "node database/scripts/init-db.js"
+  },
+  "keywords": [
+    "organization",
+    "structure",
+    "management",
+    "api",
+    "nodejs",
+    "express",
+    "mssql"
+  ],
+  "author": "Your Name",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "ejs": "^3.1.9",
+    "mssql": "^10.0.1",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "express-validator": "^7.0.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^7.1.5",
+    "express-session": "^1.17.3",
+    "connect-mssql": "^1.1.0",
+    "connect-flash": "^0.1.1",
+    "csurf": "^1.11.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "uuid": "^9.0.1",
+    "crypto": "^1.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.1.1",
+    "@types/node": "^20.10.5"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "logs/*",
+      "tests/*",
+      "docs/*"
     ],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "express": "^4.18.2",
-      "ejs": "^3.1.9",
-      "mssql": "^10.0.1",
-      "dotenv": "^16.3.1",
-      "cors": "^2.8.5",
-      "helmet": "^7.0.0",
-      "morgan": "^1.10.0",
-      "express-validator": "^7.0.1",
-      "bcryptjs": "^2.4.3",
-      "jsonwebtoken": "^9.0.2",
-      "compression": "^1.7.4",
-      "express-rate-limit": "^6.10.0",
-      "winston": "^3.10.0",
-      "express-session": "^1.17.3",
-      "connect-flash": "^0.1.1",
-      "connect-mssql": "^1.5.0",
-      "csurf": "^1.11.0",
-      "express-mongo-sanitize": "^2.2.0",
-      "xss": "^1.0.14"
-    },
-    "devDependencies": {
-      "nodemon": "^3.0.1",
-      "jest": "^29.6.4",
-      "supertest": "^6.3.3",
-      "@types/jest": "^29.5.4"
-    },
-    "engines": {
-      "node": ">=18.0.0"
-    },
-    "jest": {
-      "testEnvironment": "node",
-      "coveragePathIgnorePatterns": [
-        "/node_modules/"
-      ],
-      "testMatch": [
-        "**/tests/**/*.test.js"
-      ]
-    }
+    "delay": "2500"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/config/database.js"
+    ],
+    "testMatch": [
+      "**/tests/**/*.test.js"
+    ]
   }
+}
