--- a/Organization API/.env.example
+++ b/Organization API/.env.example
@@ -11,6 +11,7 @@ DB_USER=sa
 DB_PASSWORD=YourStrongPassword123!
 DB_ENCRYPT=true
 DB_TRUST_SERVER_CERTIFICATE=true
+DB_TRUSTED_CONNECTION=false
 
 # Session Configuration
 SESSION_SECRET=your-super-secret-session-key-change-this-in-production
@@ -33,10 +34,12 @@ LOG_DIR=logs
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_WHITELIST_IPS=
+RATE_LIMIT_WHITELIST_API_KEYS=
 
 # Admin Credentials (for initial setup)
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin123
+ADMIN_PASSWORD=Admin@123
 
 # Email Configuration (optional)
 SMTP_HOST=smtp.gmail.com
@@ -56,6 +59,13 @@ CSRF_ENABLED=true
 # Cache Configuration (optional)
 CACHE_ENABLED=false
 CACHE_TTL=3600
+CACHE_TYPE=memory
+
+# Redis Configuration (optional)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
 
 # External API Keys (if needed)
 EXTERNAL_API_KEY=
